--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -98,7 +98,7 @@
 
 <pre tabindex="0"><code>https://github.com/smithbarlow/smithbarlow.gpg
 
-curl -sL https://smithbarlow.xyz/smithbarlow.gpg | gpg --import
+curl -sL http://v55dqkmukq7hl6hty5sn6wlbcfn6ldadxt3h4wuynb2dyonpu5hrcmyd.onion/smithbarlow.gpg | gpg --import
 Fingerprint: C6A4 8319 50BF 042C 8AB2  EDD7 43D0 FB42 FE58 2CE5
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
