--- a/public/404.html
+++ b/public/404.html
@@ -81,7 +81,7 @@
 
   </main>
   <footer><small id="foot">
-  <a href="https://github.com/smithbarlow/smithbarlow.xyz">Copyright ©2025 Smith Barlow All Rights Reserved<br>
+  <a href="https://github.com/smithbarlow/smithbarlow.xyz">Copyright ©2025 Smith Barlow All Rights Reserved</a><br>
 </small>
 <a href='http://v55dqkmukq7hl6hty5sn6wlbcfn6ldadxt3h4wuynb2dyonpu5hrcmyd.onion/index.xml'>
     <img id="rss" src="/images/rss.svg" alt="button for my RSS feed">
