--- a/public/about/index.html
+++ b/public/about/index.html
@@ -106,7 +106,7 @@
 <li>Obtained an <a href="https://www.ssllabs.com/ssltest/analyze.html?d=smithbarlow.xyz">A+ SSL Labs Score</a>, configured Let&rsquo;s Encrypt TLS (TLS 1.2/1.3) with strong AEAD ciphers, implemented HSTS preload, instituted DNSSEC to prevent MITM attacks, and restrictive CAA policies to prevent rogue issuance.</li>
 <li>Secured Nginx with tight content security policies, method restrictions (GET/HEAD only), rate-limiting, appropriate header limits, and privacy-respecting security headers.</li>
 <li>Deployed kernel-level security via extensive sysctl settings, unused protocol and module blacklisting (modprobe blocklist), and AppArmor confinement for Nginx and Tor to limit post-exploit impact.</li>
-<li>Incorporated a strong chain of trust: a signed Tor mirror statement, mirrored public GPG keys, and SHA-512 checksum proofs—all implemented across DNS TXT records and a <a href="https://smithbarlow.xyz/smithbarlow.gpg">GitHub mirror</a>.</li>
+<li>Incorporated a strong chain of trust: a signed Tor mirror statement, mirrored public GPG keys, and SHA-512 checksum proofs—all implemented across DNS TXT records and a <a href="https://github.com/smithbarlow/smithbarlow.gpg">GitHub mirror</a>.</li>
 </ul>
 <h3 id="verification">Verification</h3>
 
