--- a/public/about/index.html
+++ b/public/about/index.html
@@ -96,7 +96,7 @@
 <li>Deployed and configured OPNsense as the main router and firewall, setting up VLANs, appropriate subnets, DHCP, and firewall rules to segment and secure homelab traffic.</li>
 <li>Utilized Proxmox to host virtual machines for labs and services, learning virtualization, resource allocation, and snapshot management—accomplished utilizing LXC containers and KVM virtual machines.</li>
 <li>Created a SOC lab environment using Kali Linux for vulnerability assessment, a Windows target for exploitation, and the Wazuh stack for real-time detection and prevention.</li>
-<li>Configured OPNsense firewalling with strict baselines—ensure intervlan traffic is strict and within scope.</li>
+<li>Configured OPNsense firewalling with strict baselines—ensuring intervlan traffic is strict and within scope.</li>
 <li>Utilized Wireguard to secure sensitive traffic from self-hosted services to VPS proxy—terminated with TLS 1.2/1.3 certificates.</li>
 </ul>
 <p><strong>VPS</strong><br>
